--- a/back/mdd-api/src/main/resources/application.properties
+++ b/back/mdd-api/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jackson.time-zone=Europe/Paris
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# JWT
+# IMPORTANT: secret must be at least 32 characters for HS256.
+jwt.secret=${JWT_SECRET:change-me-change-me-change-me-change-me}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
