--- a/back/mdd-api/src/test/resources/application-test.properties
+++ b/back/mdd-api/src/test/resources/application-test.properties
@@ -4,4 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+jwt.secret=test-secret-test-secret-test-secret-test!!
+jwt.expiration-ms=3600000
 
