--- a/front/package.json
+++ b/front/package.json
@@ -45,6 +45,7 @@
     "@types/cypress": "^0.1.6",
     "@types/mocha": "^10.0.10",
     "@types/node": "^25.2.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "cypress": "^15.9.0",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
