--- a/back/mdd-api/src/main/resources/application.properties
+++ b/back/mdd-api/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.servlet.multipart.max-request-size=10MB
 # IMPORTANT: secret must be at least 32 characters for HS256.
 jwt.secret=${JWT_SECRET:change-me-change-me-change-me-change-me}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
